# psid

./: .gitignore  README.md  myst.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: api.md  comparison_psidr.md  crosswalk.md  data_structure.md  index.md  quickstart.md  transitions.md
src/psid/: __init__.py  download.py  load.py  panel.py  sample.py  transitions.py  variables.py
tests/: __init__.py  test_download.py  test_panel.py  test_sample_filter.py  test_transitions.py  test_variables.py
