[project]
name = "psid"
version = "0.1.0"
description = "Python package for working with PSID (Panel Study of Income Dynamics) data"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Max Ghenis", email = "max@cosilico.ai"}
]
keywords = ["psid", "panel data", "survey", "microdata", "longitudinal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "requests>=2.28.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/CosilicoAI/psid"
Repository = "https://github.com/CosilicoAI/psid"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/psid"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
